--- a/smartanthill/dashboard/site/app/index.html
+++ b/smartanthill/dashboard/site/app/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="siteApp" ng-controller="SiteController">
+<html lang="en" ng-app="siteApp" ng-controller="MainController as vm">
   <head>
     <meta charset="utf-8">
-    <title ng-bind-template="SmartAnthill: {{ currentPage || 'Error: Page not found'}}"></title>
+    <title ng-bind-template="SmartAnthill: {{ vm.currentPage || 'Error: Page not found'}}"></title>
+    <meta name="fragment" content="!" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <!-- build:css(.) styles/vendor.css -->
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-ui-select/dist/select.css" />
     <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css" />
+    <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.min.css" />
     <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="bower_components/ng-table/dist/ng-table.min.css" />
     <!-- endbower -->
@@ -28,20 +30,20 @@
         <nav class="navbar navbar-inverse" role="navigation">
           <div class="container-fluid">
             <div class="navbar-header">
-              <a class="navbar-brand" href="#/">SmartAnthill</a>
+              <a class="navbar-brand" href="#!/">SmartAnthill</a>
             </div>
 
             <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
-                <li ng-class="{active: isRouteActive('/devices')}"><a href="#/devices"><i class="fa fa-gamepad fa-lg"></i>Devices</a></li>
-                <li ng-class="{active: isRouteActive('/network')}"><a href="#/network"><i class="fa fa-globe fa-lg"></i>Network</a></li>
-                <li ng-class="{active: isRouteActive('/console')}"><a href="#/console"><i class="fa fa-terminal fa-lg"></i>Console</a></li>
-                <li ng-class="{active: isRouteActive('/settings')}"><a href="#/settings"><i class="fa fa-cogs fa-lg"></i>Settings</a></li>
+                <li ng-class="{active: vm.isRouteActive('/devices')}"><a href="#!/devices"><i class="fa fa-gamepad fa-lg"></i>Devices</a></li>
+                <li ng-class="{active: vm.isRouteActive('/network')}"><a href="#!/network"><i class="fa fa-globe fa-lg"></i>Network</a></li>
+                <li ng-class="{active: vm.isRouteActive('/console')}"><a href="#!/console"><i class="fa fa-terminal fa-lg"></i>Console</a></li>
+                <li ng-class="{active: vm.isRouteActive('/settings')}"><a href="#!/settings"><i class="fa fa-cogs fa-lg"></i>Settings</a></li>
               </ul>
 
               <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Help <span class="caret"></span></a>
+                <li class="dropdown" dropdown>
+                  <a class="dropdown-toggle" data-toggle="dropdown" dropdown-toggle>Help <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
                     <li><a href="http://docs.smartanthill.org" target="_blank"><i class="fa fa-book"></i>&nbsp;Documentation</a></li>
                     <li><a href="https://github.com/smartanthill/smartanthill2_0" target="_blank"><i class="fa fa-github"></i>&nbsp;Source Code</a></li>
@@ -63,6 +65,7 @@
       <div ng-view=""></div>
 
       <footer>
+        <hr>
         <p>
           <span class="glyphicon glyphicon-copyright-mark"></span> Copyright 2015, OLogN Technologies AG.
         </p>
@@ -81,13 +84,18 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-ui-select/dist/select.js"></script>
     <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
+    <script src="bower_components/AngularJS-Toaster/toaster.min.js"></script>
     <script src="bower_components/ng-table/dist/ng-table.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
-    <script src="scripts/directives/misc.js"></script>
+    <script src="scripts/app-routes.js"></script>
+    <script src="scripts/factories/dataservice.js"></script>
+    <script src="scripts/factories/notifyuser.js"></script>
+    <script src="scripts/directives/showformerrors.js"></script>
+    <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/dashboard.js"></script>
     <script src="scripts/controllers/devices.js"></script>
     <script src="scripts/controllers/network.js"></script>
