--- a/smartanthill/dashboard/site/app/index.html
+++ b/smartanthill/dashboard/site/app/index.html
@@ -66,7 +66,7 @@
       <footer>
         <hr>
         <p>
-          <span class="glyphicon glyphicon-copyright-mark"></span> Copyright 2015, OLogN Technologies AG.
+          <span class="fa fa-copyright"></span> Copyright 2015, OLogN Technologies AG.
         </p>
       </footer>
 
