--- a/smartanthill/dashboard/site/app/index.html
+++ b/smartanthill/dashboard/site/app/index.html
@@ -96,6 +96,7 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/dashboard.js"></script>
     <script src="scripts/controllers/devices.js"></script>
+    <script src="scripts/controllers/device-info.js"></script>
     <script src="scripts/controllers/network.js"></script>
     <script src="scripts/controllers/console.js"></script>
     <script src="scripts/controllers/settings.js"></script>
